se ingresa consulta oficinas-entidad y no deja imprimir hasta qque cliente acepte

--- a/Usuarios_planta/Usuarios_planta/Usuarios_planta.csproj
+++ b/Usuarios_planta/Usuarios_planta/Usuarios_planta.csproj
@@ -230,6 +230,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="app1.ico" />
+    <None Include="Resources\copy_50px.png" />
     <Content Include="índice.ico" />
     <None Include="Resources\calculator_50px.png" />
   </ItemGroup>
